--- a/Keybie/MainWindow.xaml
+++ b/Keybie/MainWindow.xaml
@@ -1,14 +1,12 @@
-﻿<Window x:Class="Keybie.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Keybie"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Keybie.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Window.DataContext>
-        <local:Main/>
-    </Window.DataContext>
     <Window.Resources>
         <DataTemplate DataType="{x:Type local:Input}">
             <StackPanel Orientation="Horizontal">
@@ -17,7 +15,40 @@
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
+    <Window.DataContext>
+        <local:Main/>
+    </Window.DataContext>
     <Grid>
-        <ListView ItemsSource="{Binding Inputs}"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal" >
+            <TextBlock Text="Port:" VerticalAlignment="Center"/>
+            <ComboBox Width="150" Margin="10 0" VerticalAlignment="Center" ItemsSource="{Binding Ports}" SelectedValue="{Binding SelectedPort}" IsEnabled="{Binding UnLockUi}"/>
+            <Button Content="refresh" Command="{Binding RefreshCommand}" Margin="0 0" IsEnabled="{Binding UnLockUi}"/>
+            <TextBlock Text="Baud Rate:" VerticalAlignment="Center" Margin="10 0 0 0"/>
+            <ComboBox Width="150" Margin="10 0" VerticalAlignment="Center" ItemsSource="{Binding BaudRates}" SelectedValue="{Binding SelectedBaudRate}" IsEnabled="{Binding UnLockUi}"/>
+
+            <Button Content="Start" Command="{Binding StartCommand}"/>
+            <Button Content="Stop" Command="{Binding StopCommand}" Margin="10 0"/>
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <Button Content="Save Config" Command="{Binding SaveConfigCommand}"/>
+            <Button Content="Add Send Keys"/>
+            <Button Content="Add Run Process" Command="{Binding AddRunProcessCommand}"/>
+        </StackPanel>
+
+        <DataGrid Grid.Row="2" ItemsSource="{Binding Actions}" IsReadOnly="False"/>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="3">
+            <TextBlock Text="Last Input:" VerticalAlignment="Center"/>
+            <TextBox Text="{Binding LastInput}" IsReadOnly="True" Width="300"/>
+
+        </StackPanel>
     </Grid>
 </Window>
